<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="appName">Geo-Catch</string>

    <!-- Map fragment -->
    <string name="mapFragmentLabel">Map</string>

    <string name="syncError">Couldn\'t load fishing data...</string>

    <!-- Settings fragment -->
    <string name="settingsFragmentLabel">Settings</string>

    <string name="languageSettingsLabel">LANGUAGE</string>

    <!-- Get photo fragment -->
    <string name="getPhotoFragmentLabel">Take a photo</string>

    <string name="processingPhotoMessage">Processing photo...</string>

    <string name="noCameraSupport">The camera of this device currently isn\'t supported</string>

    <!-- Preview photo fragment -->
    <string name="previewPhotoFragmentLabel">Photo preview</string>

    <!-- Populate photo info fragment (some strings are also used in map settings fragment)-->
    <string name="populatePhotoInfoFragmentLabel">Photo info</string>

    <string name="photoDescriptionInitialLabel">Add description here...</string>

    <string name="domainPropertiesSectionLabel">DETAILS</string>

    <string name="fishDomainPropertyInitialLabel">Fish...</string>

    <string name="toolDomainPropertyInitialLabel">Tool...</string>

    <string name="baitDomainPropertyInitialLabel">Bait...</string>

    <string name="shareSectionLabel">SHARE</string>

    <string name="sharePublicOptionLabel">Public</string>

    <string name="sharePrivateOptionLabel">Private</string>

    <string name="locationLoadingWarning">Loading location...</string>

    <string name="imageUploadingAborted">Uploading is cancelled</string>

    <string name="imageUploadingError">Uploading error</string>

    <string name="imageUploadingRetry">Retry</string>

    <string name="imageUploadingLater">Upload later</string>

    <string name="imageUploadingMessage">Uploading photo...</string>

    <string name="postponedImageSavingMessage">Saving photo...</string>

    <string name="postponedImageSavingError">Couldn\'t save photo</string>

    <string name="fishNotPopulatedWarning">Fish type is required</string>

    <!-- Map settings fragment -->
    <string name="mapSettingsFragmentLabel">Map settings</string>

    <string name="photoOwnerSectionLabel">OWNER</string>

    <string name="domainPropertyNotPresented">There is no such value</string>

    <!-- Photo browsing fragment -->
    <string name="photoBrowsingFragmentLabel">View photo</string>

    <string name="photoLoadingMessage">Loading photo...</string>

    <string name="photoLoadingError">Couldn\'t load photo</string>

    <string name="photoDeletingMessage">Removing photo...</string>

    <string name="photoLoadingCancelled">Loading is cancelled</string>

    <string name="photoDeleteAlertTitle">Are you sure you want to delete this photo?</string>

    <string name="photoDeleteAlertYes">Yes</string>

    <string name="photoDeleteAlertCancel">Cancel</string>

    <string name="photoReportAlertTitle">Are you sure you want to report this photo?</string>

    <string name="photoReportAlertYes">Yes</string>

    <string name="photoReportAlertCancel">Cancel</string>

    <!-- Uploaded photos fragment -->
    <string name="uploadedPhotosFragmentLabel">My photos</string>

    <string name="uploadedPhotosLoadingMessage">Loading photos...</string>

    <string name="uploadedPhotosLoadingError">Couldn\'t load photos</string>

    <string name="uploadedPhotosLoadingCancelled">Loading is cancelled</string>

    <string name="uploadedPhotosNoPhotosYet">You have no photos yet</string>

    <!-- Postponed photos fragment -->
    <string name="postponedPhotosFragmentLabel">Postponed photos</string>

    <string name="postponedPhotosLoadingMessage">Loading postponed photos...</string>

    <string name="postponedPhotosLoadingError">Couldn\'t load postponed photos</string>

    <string name="postponedPhotosUploadingMessage">Uploading photo...</string>

    <string name="postponedPhotosUploadingCancelled">Uploading is cancelled</string>

    <string name="postponedPhotosUploadingError">Couldn\'t upload photo</string>

    <string name="postponedPhotosDeletingMessage">Removing photo...</string>

    <string name="postponedPhotosDeletingError">Couldn\'t remove photo</string>

   <!-- -->
   <string name="noNetworkConnectionError">Network connection is not available</string>

   <string name="noGPSConnectionWarning">GPS is required. Do you want to enable it now?</string>

   <string name="noGPSConnectionYesChoice">Yes</string>

   <string name="noGPSConnectionLaterChoice">Later</string>

   <string name="actionBarTitleDelimiter">|</string>

   <!-- Action bar status area -->
    <string name="statusAreaLocationNotDetected">Location is not detected</string>

    <string name="statusAreaLocationIsLoading">Loading location...</string>

    <string name="statusAreaLocationDetected">Location is detected</string>

    <string name="commonServerCommunicationError">Server communication error</string>

    <string name="progressBarCancel">Cancel</string>

    <string name="googlePlayServicesError">Please install Google Play Services...</string>

    <string-array name="shareSectionOptions">
        <item>Public</item>
        <item>Private</item>
    </string-array>

    <string-array name="photoOwnerArray">
        <item>Anyone</item>
        <item>Me</item>
    </string-array>

    <!-- Supported languages array -->
    <string-array name="languages_array">
        <item>English</item>
        <item>Russian</item>
    </string-array>

    <string-array name="locales_array">
        <item>en</item>
        <item>ru</item>
    </string-array>

</resources>
